[gd_scene load_steps=5 format=3 uid="uid://b5qvbkkp3atbv"]

[ext_resource type="Theme" uid="uid://b16mm2uf5waty" path="res://Big_Font.tres" id="1_7rabf"]
[ext_resource type="Script" path="res://lp_4_1.gd" id="1_236j6"]

[sub_resource type="LabelSettings" id="LabelSettings_mrd5s"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_bia4l"]
font_size = 38

[node name="lp 4-1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_236j6")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 548.0
offset_right = 214.0
offset_bottom = 623.0
theme = ExtResource("1_7rabf")
text = "Calc"

[node name="btnClear" type="Button" parent="."]
offset_left = 250.0
offset_top = 557.0
offset_right = 382.0
offset_bottom = 632.0
theme = ExtResource("1_7rabf")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
offset_left = 477.0
offset_top = 546.0
offset_right = 609.0
offset_bottom = 621.0
theme = ExtResource("1_7rabf")
text = "Exit"

[node name="txtInput" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 36.0
offset_right = 327.0
offset_bottom = 93.0

[node name="lblResults" type="Label" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 132.0
offset_right = 764.0
offset_bottom = 410.0
label_settings = SubResource("LabelSettings_mrd5s")

[node name="lbl" type="Label" parent="."]
offset_left = 353.0
offset_top = 25.0
offset_right = 599.0
offset_bottom = 99.0
text = "input number of copies here"
label_settings = SubResource("LabelSettings_bia4l")

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
